# bzip3

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  configure.ac
build-aux/: workspace_status.bat  workspace_status.ps1  workspace_status.sh
src/: libbz3.c  main.c
